# noveris-platform

./: .env.example  .gitignore  Makefile
.github/workflows/: ci.yaml
backend/api/: alembic.ini  pyproject.toml
backend/api/app/: main.py
backend/api/app/core/: config.py  cors.py  csrf.py  errors.py  events.py  logging.py  pagination.py  rate_limit.py  security.py  storage.py
backend/api/app/db/migrations/: env.py
backend/api/app/db/migrations/versions/: a92bfb5887b0_init.py
backend/api/tests/: test_csrf.py  test_health.py  test_pagination.py  test_rate_limit.py  test_security.py  test_storage.py
backend/sandbox/: pyproject.toml
backend/sandbox/app/: main.py
backend/shared/: pyproject.toml
backend/shared/navima_shared/: __init__.py
backend/shared/navima_shared/db/: __init__.py  session.py
backend/worker/: pyproject.toml
backend/worker/app/: main.py
docker/: .env.docker  docker-compose.prod.yaml  docker-compose.yaml
docs/: Passion-unknown-design-20260416-navima-step-by-step.md  error-codes.md  migration-conventions.md  testing-strategy.md
frontend/admin/: index.html  package-lock.json  package.json
frontend/admin/src/: App.tsx
frontend/web/: index.html  package-lock.json  package.json
frontend/web/src/: App.tsx
frontend/web/src/shared/api/: client.ts  interceptors.ts
frontend/web/src/shared/components/pagination/: Pagination.tsx
frontend/web/src/shared/hooks/: useSse.ts
