[project]
name = "navima-api"
version = "0.1.0"
description = "Navima Platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",
    "itsdangerous>=2.1.0",
    "prometheus-client>=0.20.0",
    "boto3>=1.34.0",
    "minio>=7.2.0",
    "orjson>=3.9.0",
    "structlog>=24.1.0",
    "navima-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "factory-boy>=3.3.0",
    "faker>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
